vlib/v/checker/tests/array_map_fn_err_a.vv
fn add(a int, b int) int {
	return a + b
}
fn main() {
	a := [1,2,3,4].map(add)
	println(a)
}
